examples/test/testpolicy3192.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3192
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key47: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value13
          key35: value30
      podSelector:
        matchLabels:
          key26: value45
          key2: value4
          key7: value4
